--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-modal-image": "^2.5.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
@@ -41,5 +42,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@loadable/babel-plugin": "^5.13.2",
+    "babel-loader": "^8.2.3",
+    "webpack": "^5.64.4"
   }
 }
